<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/password2"
    tools:context="com.kawakp.kp.oxygenerator.view.LoginActivity"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_h_164"
        android:layout_marginLeft="282px"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/password_question_tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorHomeTitle"
            android:textSize="18px"
            android:text="@string/password_question"/>

        <EditText
            android:id="@+id/password_question"
            android:layout_width="220px"
            android:layout_height="34px"
            android:layout_marginLeft="75px"
            android:layout_marginTop="@dimen/px_h_10"
            android:paddingLeft="12px"
            android:maxLength="10"
            android:background="@drawable/password_input"
            android:hint="@string/password_question_hint"
            android:textColor="@color/colorPasswordInput"
            android:textColorHint="@color/colorPasswordHint"
            android:textSize="16px" />

        <EditText
            android:id="@+id/password_answer"
            android:layout_width="220px"
            android:layout_height="34px"
            android:layout_marginLeft="75px"
            android:layout_marginTop="@dimen/px_h_10"
            android:paddingLeft="12px"
            android:maxLength="10"
            android:background="@drawable/password_input"
            android:hint="@string/password_answer_hint"
            android:textColor="@color/colorPasswordInput"
            android:textColorHint="@color/colorPasswordHint"
            android:textSize="16px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_h_10"
            android:textColor="@color/colorHomeTitle"
            android:textSize="18px"
            android:text="@string/password_one"/>

        <LinearLayout
            android:layout_width="220px"
            android:layout_height="34px"
            android:layout_marginLeft="75px"
            android:layout_marginTop="@dimen/px_h_10"
            android:background="@drawable/password_input"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/password_one"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="12px"
                android:layout_weight="1"
                android:maxLength="7"
                android:inputType="numberPassword"
                android:background="@android:color/transparent"
                android:hint="@string/password_one_hint"
                android:textColor="@color/colorPasswordInput"
                android:textColorHint="@color/colorPasswordHint"
                android:textSize="16px" />

            <ImageView
                android:id="@+id/eye_one"
                android:layout_width="40px"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingLeft="10px"
                android:paddingRight="10px"
                android:tag="false"
                android:src="@drawable/icon_eye_invisible"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_h_10"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/password_one_confirm"
                android:layout_width="220px"
                android:layout_height="34px"
                android:layout_marginLeft="75px"
                android:paddingLeft="12px"
                android:background="@drawable/password_input"
                android:maxLength="7"
                android:inputType="numberPassword"
                android:hint="@string/password_one_confirm_hint"
                android:textColor="@color/colorPasswordInput"
                android:textColorHint="@color/colorPasswordHint"
                android:textSize="16px" />

            <ImageView
                android:id="@+id/password_one_confirm_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="9px"
                android:src="@drawable/icon_error"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_h_10"
            android:textColor="@color/colorHomeTitle"
            android:textSize="18px"
            android:text="@string/password_two"/>

    <LinearLayout
        android:layout_width="220px"
        android:layout_height="34px"
        android:layout_marginLeft="75px"
        android:layout_marginTop="@dimen/px_h_10"
        android:background="@drawable/password_input"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/password_two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="12px"
            android:layout_weight="1"
            android:maxLength="7"
            android:background="@android:color/transparent"
            android:inputType="numberPassword"
            android:hint="@string/password_two_hint"
            android:textColor="@color/colorPasswordInput"
            android:textColorHint="@color/colorPasswordHint"
            android:textSize="16px" />

        <ImageView
            android:id="@+id/eye_two"
            android:layout_width="40px"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:paddingLeft="10px"
            android:paddingRight="10px"
            android:tag="false"
            android:src="@drawable/icon_eye_invisible"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_h_10"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/password_two_confirm"
                android:layout_width="220px"
                android:layout_height="34px"
                android:layout_marginLeft="75px"
                android:paddingLeft="12px"
                android:background="@drawable/password_input"
                android:maxLength="7"
                android:inputType="numberPassword"
                android:hint="@string/password_two_confirm_hint"
                android:textColor="@color/colorPasswordInput"
                android:textColorHint="@color/colorPasswordHint"
                android:textSize="16px" />

            <ImageView
                android:id="@+id/password_two_confirm_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="9px"
                android:src="@drawable/icon_error"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_h_10"
            android:textColor="@color/colorHomeTitle"
            android:textSize="14px"
            android:text="@string/password_careful"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/password2_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/password_prev"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp" />

    <ImageView
        android:id="@+id/password2_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/px_h_100"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/password_next"/>

</RelativeLayout>