<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/password_see"
    tools:context="com.kawakp.kp.oxygenerator.view.LoginActivity"
    >

    <ImageView
        android:id="@+id/password_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20px"
        android:src="@drawable/icon_password_cancel"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_h_197"
        android:layout_marginLeft="241px"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18px"
            android:textColor="@color/colorHomeTitle"
            android:text="@string/password_see_question"/>

        <TextView
            android:id="@+id/password_see_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_h_19"
            android:layout_marginLeft="86px"
            android:textSize="16px"
            android:textColor="@color/colorHomeTitle"
            android:text="@string/password_see_question_hint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36px"
            android:layout_marginTop="@dimen/px_h_9"
            android:textSize="18px"
            android:textColor="@color/colorHomeTitle"
            android:text="@string/password_see_answer"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/px_h_10"
            android:layout_marginLeft="74px"
            >

            <EditText
                android:id="@+id/password_see_answer"
                android:layout_width="220px"
                android:layout_height="34px"
                android:paddingLeft="12px"
                android:maxLength="10"
                android:background="@drawable/password_input"
                android:textSize="16px"
                android:textColor="@color/colorHomeTitle"
                android:hint="@string/password_see_answer_hint"/>

            <ImageView
                android:id="@+id/password_see_answer_confirm_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_marginLeft="8px"
                android:src="@drawable/icon_error"/>

        </LinearLayout>

        <TextView
            android:id="@+id/password_see_submit"
            android:layout_width="220px"
            android:layout_height="34px"
            android:layout_marginTop="@dimen/px_h_30"
            android:layout_marginLeft="74px"
            android:gravity="center"
            android:background="@drawable/password_btn"
            android:text="@string/password_see_confirm"/>

        <LinearLayout
            android:id="@+id/password_see"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/px_h_60"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:src="@drawable/icon_prompt"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_cir" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="9px"
                        android:text="@string/password_see_one"
                        android:textColor="@color/colorHomeTitle"
                        android:textSize="18px" />

                    <TextView
                        android:id="@+id/password_see_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="9px"
                        android:text="1234567"
                        android:textColor="@color/colorPasswordSee"
                        android:textSize="16px" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10px"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_cir" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="9px"
                        android:text="@string/password_see_two"
                        android:textColor="@color/colorHomeTitle"
                        android:textSize="18px" />

                    <TextView
                        android:id="@+id/password_see_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="9px"
                        android:text="1234567"
                        android:textColor="@color/colorPasswordSee"
                        android:textSize="16px" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10px"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_cir" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="9px"
                        android:text="@string/password_see_last_a"
                        android:textColor="@color/colorHomeTitle"
                        android:textSize="18px" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="9px"
                        android:text="@string/password_see_last_b"
                        android:textColor="@color/colorPasswordSee"
                        android:textSize="18px" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>