<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorHomeBg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sys_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/px_h_22"
                android:layout_marginLeft="16px"
                android:layout_marginTop="@dimen/px_h_20"
                android:text="@string/set_title"
                android:textColor="@color/colorHomeTitle"
                android:textSize="16px" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:layout_weight="1"
                android:gravity="end|right" />

            <ImageView
                android:id="@+id/set_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_info" />

            <TextView
                android:id="@+id/set_plc_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16px"
                android:layout_marginRight="15px"
                android:text="2017/06/09 14:30 星期五"
                android:textColor="@color/colorHomeDate"
                android:textSize="14px" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16px"
            android:layout_marginRight="16px"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/set_param"
                android:layout_width="53px"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/set_param_tv"
                    android:layout_width="53px"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/set_param_title"
                    android:textColor="@color/colorHomeDate"
                    android:textSize="13px" />

                <ImageView
                    android:id="@+id/set_param_iv"
                    android:layout_width="53px"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/px_h_12"
                    android:src="@drawable/icon_line_blue" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/set_control"
                android:layout_width="53px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/set_control_tv"
                    android:layout_width="53px"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/set_control_title"
                    android:textColor="@color/colorHomeTitle"
                    android:textSize="13px" />

                <ImageView
                    android:id="@+id/set_control_iv"
                    android:layout_width="53px"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/px_h_12"
                    android:src="@drawable/icon_line_blue"
                    android:visibility="invisible" />
            </LinearLayout>

            <TextView
                android:id="@+id/set_reset_password"
                android:layout_width="53px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/set_param_reset_password"
                android:textColor="@color/colorHomeStatus"
                android:textSize="13px" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorSetLine" />

        <FrameLayout
            android:id="@+id/set_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/px_h_22"></FrameLayout>

    </LinearLayout>

</FrameLayout>
